documentacion/obtenida/ARINC 429/driver and software/CM429-1/API/C41W32.H

typedef void VOID;
typedef int INT;
typedef int * LPINT;
typedef unsigned short USHORT;
typedef unsigned short * LPUSHORT;
typedef unsigned long ULONG;
typedef long LONG;
typedef long * LPLONG;
typedef const char * LPCSTR;
typedef char * LPSTR;
typedef int BOOL;
typedef int HCARD;
typedef int ERRVAL;

C41W32API USHORT __stdcall C41_ListSetXmt(USHORT listaddr,INT channum,HCARD handleval);

C41W32API ULONG __stdcall C41_MakeLong(USHORT valh,USHORT vall);

C41W32API LPSTR __stdcall C41_MantToAscii(LPSTR buf,LONG mant,INT exp);

C41W32API ULONG __stdcall C41_Mask(ULONG dataval,USHORT cntval);

C41W32API VOID __stdcall C41_MaxMant(LPLONG mant,LPINT exp);

C41W32API VOID __stdcall C41_MemFill(USHORT value,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API VOID __stdcall C41_MemStrRd(LPUSHORT valueptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API VOID __stdcall C41_MemStrWr(LPUSHORT valueptr,USHORT addrval,USHORT countval,HCARD handleval);

C41W32API USHORT __stdcall C41_MEMWINRdB(ULONG addrval,HCARD handleval);

C41W32API ULONG __stdcall C41_MEMWINRdL(ULONG addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_MEMWINRdW(ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MEMWINWrB(USHORT value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MEMWINWrL(ULONG value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MEMWINWrW(USHORT value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_MemWipe(HCARD handleval);

C41W32API ULONG __stdcall C41_Mod(ULONG moda,ULONG modb);

C41W32API USHORT __stdcall C41_MsgAddr(INT msgnum,HCARD handleval);

C41W32API ULONG __stdcall C41_MsgArincPeek(INT msgnum,HCARD handleval);

C41W32API VOID __stdcall C41_MsgArincPoke(ULONG msgval,INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgClear(HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgDisable(INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgEnable(INT msgnum,HCARD handleval);

C41W32API ULONG __stdcall C41_MsgEncoderPeek(INT msgnum,HCARD handleval);

C41W32API VOID __stdcall C41_MsgEncoderPoke(ULONG msgval,INT msgnum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgReset(HCARD handleval);

C41W32API ERRVAL __stdcall C41_MsgWipe(HCARD handleval);

C41W32API ULONG __stdcall C41_Mul(ULONG mula,ULONG mulb);

C41W32API VOID __stdcall C41_NormalMant(LPLONG mant,LPINT exp);

C41W32API USHORT __stdcall C41_PortRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_PortWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_ProgRd(USHORT addrval,HCARD handleval);

C41W32API VOID __stdcall C41_ProgWr(USHORT value,USHORT addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_RAMRdB(ULONG addrval,HCARD handleval);

C41W32API ULONG __stdcall C41_RAMRdL(ULONG addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_RAMRdW(ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_RAMWrB(USHORT value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_RAMWrL(ULONG value,ULONG addrval,HCARD handleval);

C41W32API VOID __stdcall C41_RAMWrW(USHORT value,ULONG addrval,HCARD handleval);

C41W32API USHORT __stdcall C41_SchedAddr(INT schindex,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedClear(INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedFixedGap(USHORT gapval,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedInsert(USHORT schflag,USHORT schopcode,USHORT schoperand,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedNop(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedRd(LPUSHORT valueptr,INT schindex,INT channum,HCARD handleval);

C41W32API INT __stdcall C41_SchedUser(USHORT useraddr,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedWipe(INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SchedWr(LPUSHORT valueptr,INT schindex,INT channum,HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqInterval(INT interval,HCARD handleval);

C41W32API BOOL __stdcall C41_SeqIsRunning(HCARD handleval);

C41W32API ULONG __stdcall C41_SeqRdEx(LPUSHORT buf,ULONG bufcount,HCARD handleval);

C41W32API USHORT __stdcall C41_SeqStart(HCARD handleval);

C41W32API USHORT __stdcall C41_SeqStop(HCARD handleval);

C41W32API ERRVAL __stdcall C41_SeqWipe(HCARD handleval);

C41W32API ULONG __stdcall C41_Shl(ULONG dataval,USHORT cntval);

C41W32API ULONG __stdcall C41_Shr(ULONG dataval,USHORT cntval);

C41W32API USHORT __stdcall C41_SignMant(LPCSTR str);

C41W32API INT __stdcall C41_ValAsciiCmpi(LPSTR str1,LPSTR str2);

C41W32API LPSTR __stdcall C41_ValAsciiCpy(LPSTR strdest,LPCSTR strsrc,INT count);

C41W32API VOID __stdcall C41_ValAsciiTrimLead(LPSTR buf);

C41W32API VOID __stdcall C41_ValAsciiTrimTrail(LPSTR buf);

C41W32API ULONG __stdcall C41_ValFromAscii(LPCSTR asciistr,INT radixval);

C41W32API LPSTR __stdcall C41_ValIncAscii(LPSTR asciistr);

C41W32API LPSTR __stdcall C41_ValInccAscii(LPSTR asciistr);

C41W32API BOOL __stdcall C41_ValIsLower(INT value);

C41W32API INT __stdcall C41_ValLenAscii(INT numbits,INT radixval);

C41W32API LPSTR __stdcall C41_ValToAscii(ULONG value,LPSTR asciistr,INT numbits,INT radixval);

C41W32API INT __stdcall C41_ValToUpper(INT value);

C41W32API ERRVAL __stdcall C41_Wipe(HCARD handleval);

#define SDI00  0x0001					//Enable SDI00
#define SDI01  0x0002					//Enable SDI01
#define SDI10  0x0004					//Enable SDI10
#define SDI11  0x0008					//Enable SDI11
#define SDIALL 0x000F					//Enable all SDIs

#define RCVCH0 0						//Receive  channel 0
#define RCVCH1 1						//Receive  channel 1
#define RCVCH2 2						//Receive  channel 2
#define RCVCH3 3						//Receive  channel 3
#define XMTCH0 4						//Transmit channel 0
#define XMTCH1 5						//Transmit channel 1

#define RCH0   0						//Receive  channel 0
#define RCH1   1						//Receive  channel 1
#define RCH2   2						//Receive  channel 2
#define RCH717 2						//Receive  717 channel (2)
#define RCH3   3						//Receive  channel 3
#define TCH4   4						//Transmit channel 0
#define TCH5   5						//Transmit channel 1

#define BADCH    0						//Missing channel
#define RCVCH    1						//Receive channel
#define XMTCH    2						//Transmit channel
#define RCV717CH 3						//717 Receive Channel

#define LIST_STAT_EMPTY   0				//List buffer is empty
#define LIST_STAT_PARTIAL 1				//List buffer is partially filled
#define LIST_STAT_FULL    2				//List buffer is full

#define PROC_PRE  1						//Pre-process
#define PROC_POST 2						//Post-process
#define PROC_FORE 3						//Foreground process